--- a/app/src/main/res/layout/activity_show_application.xml
+++ b/app/src/main/res/layout/activity_show_application.xml
@@ -123,7 +123,7 @@
             app:layout_constraintWidth_percent="0.45" />
 
         <Button
-            android:id="@+id/reject_button"
+            android:id="@+id/delete_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="26dp"
