--- a/app/src/main/res/layout/activity_show_job_to_company.xml
+++ b/app/src/main/res/layout/activity_show_job_to_company.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:hint="Company Name"
+            android:textAlignment="viewStart"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:text="Job Title"
+            android:textAlignment="viewStart"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/company_name_text_view" />
 
@@ -42,36 +44,23 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:hint="Job Description"
+            android:textAlignment="viewStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/job_title_text_view" />
 
         <Button
-            android:id="@+id/accept_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
-            android:backgroundTint="#4CAF50"
-            android:text="Accept"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/download_brochure_button"
-            app:layout_constraintWidth_percent="0.45" />
-
-        <Button
             android:id="@+id/delete_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="26dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
-            android:layout_weight="1"
             android:backgroundTint="#F44336"
-            android:text="Reject"
+            android:text="Delete Posting"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/accept_button"
-            app:layout_constraintTop_toBottomOf="@+id/download_brochure_button"
-            app:layout_constraintWidth_percent="0.45" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/download_brochure_button" />
 
         <Button
             android:id="@+id/download_brochure_button"
@@ -82,6 +71,17 @@
             android:text="Download Brochure"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/job_description_text_view" />
+
+        <TextView
+            android:id="@+id/approval_status_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="Approval Status"
+            android:textAlignment="viewEnd"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
