--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.squidwork.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/user_profile"
+        android:icon="@mipmap/baseline_account_circle_black_36"
+        android:title="My Profile"
+        android:tint="@android:color/white"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/sign_out_button2"
+        android:icon="@mipmap/icon"
+        android:title="Sign Out"
+        app:showAsAction="always" />
+
 </menu>
