--- a/app/src/main/res/layout/activity_add_posting_form_page.xml
+++ b/app/src/main/res/layout/activity_add_posting_form_page.xml
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/minCpiText" />
 
     <Button
         android:id="@+id/post_button"
@@ -78,13 +78,13 @@
         />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/minCpiText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Minimum CPI"
-        android:inputType="numberSigned"
+        android:inputType="numberSigned|numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/job_text" />
